src/output/snapshots/templategraph_php__output__json__snapshots__snapshot_unresolved_dynamic_argument.snap
---
source: src/output/json.rs
assertion_line: 294
expression: render(&graph)
---
{
  "nodes": [
    {
      "id": "/project/index.php",
      "kind": "entry",
      "display_name": "index.php",
      "is_entrypoint": true,
      "absolute_path": "/project/index.php",
      "root_relative_path": "index.php"
    },
    {
      "id": "unresolved::$dynamic",
      "kind": "unresolved",
      "display_name": "unresolved: $dynamic",
      "is_entrypoint": false
    }
  ],
  "edges": [
    {
      "from": "/project/index.php",
      "to": "unresolved::$dynamic",
      "kind": "unresolved"
    }
  ]
}
